--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -14,21 +14,11 @@
   "globals": {
     "window": true,
     "console": true,
-    "define": false,
     "require": false,
-    "exports": false,
-    "_": false,
     "afterEach": false,
     "beforeEach": false,
-    "confirm": false,
-    "context": false,
+    "before": false,
     "describe": false,
-    "xdescribe": false,
-    "expect": false,
-    "it": false,
-    "jasmine": false,
-    "waitsFor": false,
-    "runs": false,
-    "Symbol": false
+    "it": false
   }
 }
